# purelang_global

./: Cargo.toml
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs  util.rs  with_type.rs
src/: attrs.rs  configs.rs  errors.rs  instruction.rs  lib.rs  macros.rs  path_searcher.rs  string_name.rs  string_reference.rs  traits.rs
